adding db methods and view functions + swagger spec
